[qa-1] TASK-004: unit tests for ai.ts (26 tests)
- Set up vitest config (vitest.config.ts)
- Added test script to package.json
- Tests cover: parseAIResponse (valid JSON, markdown blocks, alt field names,
  malformed JSON, missing fields, empty arrays, null items)
- Tests cover: all 3 providers (OpenAI, Anthropic, Gemini) with mocked SDKs
- Tests cover: getAIService factory, validateApiKey, large playlists (100 songs)
- Tests cover: error paths (empty responses, API errors)

--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
     "build": "tsc",
     "dev": "tsc --watch",
     "start": "node dist/cli.js",
-    "clean": "rm -rf dist",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage",
+    "clean": "rm -rf dist",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
@@ -50,8 +49,7 @@
   "devDependencies": {
     "@types/inquirer": "^9.0.9",
     "@types/node": "^20.11.0",
-    "@vitest/coverage-v8": "^2.1.9",
     "typescript": "^5.9.3",
-    "vitest": "file:vitest-2.1.9.tgz"
+    "vitest": "^2.1.9"
   }
 }
