feat: add --save flag, list, and play commands (TASK-015)
- Add playlist-store service to persist playlists as JSON to ~/.config/mixaroo-lite/playlists/
- Add --save flag to generate command
- Add 'mx-lite list' to show saved playlists
- Add 'mx-lite play <id>' to reopen saved playlist URLs (with browser open)
- Add tests for playlist-store (8 tests)
- All 132 tests passing

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "commander": "^12.1.0",
     "conf": "^12.0.0",
     "inquirer": "^9.2.15",
+    "open": "^11.0.0",
     "openai": "^6.22.0",
     "ora": "^8.0.1",
     "yt-search": "^2.13.1"
