[developer-1] TASK-026: npm publish dry-run — fix files field, add .npmignore, document publish process
- Trimmed package from 102 files/40kB to 30 files/17kB
- Excluded test files and source maps from tarball
- Fixed bin path (npm pkg fix)
- npm publish --dry-run passes clean
- Added PUBLISHING.md with publish checklist

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "AI-powered CLI tool that generates playlists and creates YouTube playback links",
   "main": "dist/cli.js",
   "bin": {
-    "mx-lite": "./dist/cli.js"
+    "mx-lite": "dist/cli.js"
   },
   "type": "module",
   "scripts": {
@@ -34,7 +34,10 @@
     "node": ">=18"
   },
   "files": [
-    "dist"
+    "dist/**/*.js",
+    "dist/**/*.d.ts",
+    "!dist/**/__tests__/**",
+    "!dist/**/*.test.*"
   ],
   "dependencies": {
     "@anthropic-ai/sdk": "^0.77.0",
