--- a/package.json
+++ b/package.json
@@ -60,5 +60,8 @@
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.56.0",
     "vitest": "^2.1.9"
+  },
+  "overrides": {
+    "minimatch": ">=10.2.1"
   }
 }
