--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "gemini",
     "anthropic"
   ],
-  "author": "",
+  "author": "schoolofai",
   "license": "MIT",
   "engines": {
     "node": ">=18"
@@ -63,5 +63,10 @@
   },
   "overrides": {
     "minimatch": ">=10.2.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/schoolofai/mixaroo-lite.git"
+  },
+  "homepage": "https://github.com/schoolofai/mixaroo-lite#readme"
 }
